refactor(fare): fare 패키지의 이전 클래스들을 정리했다.