@@ -1,20 +1,24 @@
 package nextstep.subway.unit.fare.application;
 
 import static nextstep.Fixtures.*;
-import static nextstep.subway.fare.application.SurchargePolicyService.*;
+import static nextstep.subway.fare.application.SurchargePolicyService2.*;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.BDDMockito.given;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 import nextstep.member.domain.Member;
-import nextstep.subway.fare.application.FareCalculator;
-import nextstep.subway.fare.application.SurchargePolicyService;
-import nextstep.subway.fare.domain.*;
-import nextstep.subway.line.domain.Line;
-import nextstep.subway.path.domain.Path;
+import nextstep.subway.fare.application.FareCalculator2;
+import nextstep.subway.fare.application.SurchargePolicyService2;
+import nextstep.subway.fare.domain.DistanceSurchargePolicy2;
+import nextstep.subway.fare.domain.LineSurchargePolicy2;
+import nextstep.subway.fare.domain.OverlappedSurchargePolicy2;
+import nextstep.subway.line.domain.Line2;
+import nextstep.subway.line.domain.LineSection2;
+import nextstep.subway.path.domain.LineSectionEdge2;
+import nextstep.subway.path.domain.Path2;
+import nextstep.subway.station.domain.Station;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -28,21 +32,31 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @DisplayName("요금 계산기 단위 테스트")
 @SuppressWarnings("NonAsciiCharacters")
 @ExtendWith(MockitoExtension.class)
-class FareCalculatorTest {
-  @Mock private SurchargePolicyService surchargePolicyService;
-  @InjectMocks private FareCalculator fareCalculator;
+class FareCalculatorTest2 {
+  @Mock private SurchargePolicyService2 surchargePolicyService;
+  @InjectMocks private FareCalculator2 fareCalculator;
+
+  private final Station 교대역 = 교대역();
+  private final Station 강남역 = 강남역();
+  private final Station 양재역 = 양재역();
+  private final Line2 이호선 = 이호선2();
+  private final Line2 신분당선 = 신분당선2();
 
   @DisplayName("요금 계산")
   @ParameterizedTest
   @MethodSource
   void calculateFare(int distance, int expectedFare) {
     Member adult = aMember().build();
-    Path path = Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선(), 삼호선()), distance, 10);
+    List<LineSectionEdge2> edges =
+        List.of(
+            LineSectionEdge2.of(LineSection2.of(교대역, 강남역, 0, 0), 이호선),
+            LineSectionEdge2.of(LineSection2.of(강남역, 양재역, distance, 10), 신분당선));
+    Path2 path = Path2.of(List.of(교대역, 강남역, 양재역), edges);
     given(surchargePolicyService.loadPolicy())
         .willReturn(
-            new OverlappedSurchargePolicy(
-                new DistanceSurchargePolicy(10L, 50L, OVERCHARGE_PER_5KM, DISTANCE_5KM),
-                new DistanceSurchargePolicy(
+            new OverlappedSurchargePolicy2(
+                new DistanceSurchargePolicy2(10L, 50L, OVERCHARGE_PER_5KM, DISTANCE_5KM),
+                new DistanceSurchargePolicy2(
                     50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, DISTANCE_8KM)));
 
     long fare = fareCalculator.calculateFare(path, adult);
@@ -73,12 +87,16 @@ class FareCalculatorTest {
   @MethodSource
   void calculateFareYouth(int distance, int expectedFare) {
     Member youth = aMember().age(13).build();
-    Path path = Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선(), 삼호선()), distance, 10);
+    List<LineSectionEdge2> edges =
+        List.of(
+            LineSectionEdge2.of(LineSection2.of(교대역, 강남역, 0, 0), 이호선),
+            LineSectionEdge2.of(LineSection2.of(강남역, 양재역, distance, 10), 신분당선));
+    Path2 path = Path2.of(List.of(교대역, 강남역, 양재역), edges);
     given(surchargePolicyService.loadPolicy())
         .willReturn(
-            new OverlappedSurchargePolicy(
-                new DistanceSurchargePolicy(10L, 50L, OVERCHARGE_PER_5KM, 5L),
-                new DistanceSurchargePolicy(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
+            new OverlappedSurchargePolicy2(
+                new DistanceSurchargePolicy2(10L, 50L, OVERCHARGE_PER_5KM, 5L),
+                new DistanceSurchargePolicy2(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
 
     long fare = fareCalculator.calculateFare(path, youth);
 
@@ -108,12 +126,16 @@ class FareCalculatorTest {
   @MethodSource
   void calculateFareChild(int distance, int expectedFare) {
     Member child = aMember().age(6).build();
-    Path path = Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), List.of(이호선(), 신분당선()), distance, 10);
+    List<LineSectionEdge2> edges =
+        List.of(
+            LineSectionEdge2.of(LineSection2.of(교대역, 강남역, 0, 0), 이호선),
+            LineSectionEdge2.of(LineSection2.of(강남역, 양재역, distance, 10), 신분당선));
+    Path2 path = Path2.of(List.of(교대역, 강남역, 양재역), edges);
     given(surchargePolicyService.loadPolicy())
         .willReturn(
-            new OverlappedSurchargePolicy(
-                new DistanceSurchargePolicy(10L, 50L, OVERCHARGE_PER_5KM, 5L),
-                new DistanceSurchargePolicy(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
+            new OverlappedSurchargePolicy2(
+                new DistanceSurchargePolicy2(10L, 50L, OVERCHARGE_PER_5KM, 5L),
+                new DistanceSurchargePolicy2(50L, Long.MAX_VALUE, OVERCHARGE_PER_8KM, 8L)));
 
     long fare = fareCalculator.calculateFare(path, child);
 
@@ -146,10 +168,15 @@ class FareCalculatorTest {
             1L, 900,
             2L, 1000);
     given(surchargePolicyService.loadPolicy())
-        .willReturn(new LineSurchargePolicy(lineIdToSurcharge));
+        .willReturn(new LineSurchargePolicy2(lineIdToSurcharge));
 
-    List<Line> lines = List.of(aLine().id(1L).build(), aLine().id(2L).build());
-    Path path = Path.of(Arrays.asList(교대역(), 강남역(), 양재역()), lines, 10, 10);
+    Line2 line1 = aLine2().id(1L).build();
+    Line2 line2 = aLine2().id(2L).build();
+    List<LineSectionEdge2> edges =
+        List.of(
+            LineSectionEdge2.of(LineSection2.of(교대역, 강남역, 5, 5), line1),
+            LineSectionEdge2.of(LineSection2.of(강남역, 양재역, 5, 5), line2));
+    Path2 path = Path2.of(List.of(교대역, 강남역, 양재역), edges);
 
     Member adult = aMember().build();
 
